[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "myst-nb"
dynamic = ["version"]
description = "A Jupyter Notebook Sphinx reader built on top of the MyST markdown parser."
authors = [{name = "ExecutableBookProject", email = "chrisj_sewell@hotmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
keywords = [
    "markdown",
    "lexer",
    "parser",
    "jupyter",
    "docutils",
    "sphinx",
]
requires-python = ">=3.7"
dependencies = [
    "importlib_metadata",
    "ipython",
    "jupyter-cache>=0.5,<0.7",
    "nbclient",  # nbclient version pinned by jupyter-client
    "myst-parser~=0.18.0",
    "nbformat~=5.0",
    "pyyaml",
    "sphinx>=4,<6",
    "typing-extensions",
    # ipykernel is not a requirement of the library,
    # but is a common requirement for users (registers the python3 kernel)
    "ipykernel",
]

[project.urls]
Homepage = "https://github.com/executablebooks/myst-nb"
Documentation = "https://myst-nb.readthedocs.io"

[project.entry-points."myst_nb.renderers"]
default = "myst_nb.core.render:NbElementRenderer"

[project.entry-points."myst_nb.mime_renderers"]
example = "myst_nb.core.render:ExampleMimeRenderPlugin"

[project.entry-points."pygments.lexers"]
myst-ansi = "myst_nb.core.lexers:AnsiColorLexer"
ipythontb = "myst_nb.core.lexers:IPythonTracebackLexer"

[project.entry-points."jcache.readers"]
myst_nb_md = "myst_nb.core.read:myst_nb_reader_plugin"

[project.optional-dependencies]
code_style = ["pre-commit"]
rtd = [
    "alabaster",
    "altair",
    "bokeh",
    "coconut>=1.4.3,<2.3.0",
    "ipykernel~=5.5",
    "ipywidgets",
    "jupytext~=1.11.2",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly",
    "sphinx-book-theme~=0.3.0",
    "sphinx-copybutton",
    "sphinx-design~=0.4.0",
    "sphinxcontrib-bibtex",
    "sympy",
]
testing = [
    "coverage>=6.4,<8.0",
    "beautifulsoup4",
    "ipykernel~=5.5",
    # for issue with 8.1.0 see https://github.com/ipython/ipython/issues/13554
    # TODO ipython 8.5 subtly changes output of test regressions
    # see https://ipython.readthedocs.io/en/stable/whatsnew/version8.html#restore-line-numbers-for-input
    "ipython!=8.1.0,<8.5",
    "ipywidgets>=8",
    "jupytext~=1.11.2",
    "matplotlib>=3.5.3,<3.6",  # TODO mpl 3.6 subtly changes output of test regressions
    "nbdime",
    "numpy",
    "pandas",
    "pytest~=7.1",
    "pytest-cov>=3,<5",
    "pytest-regressions",
    "pytest-param-files~=0.3.3",
    "sympy>=1.10.1",
]

[project.scripts]
mystnb-quickstart = "myst_nb.cli:quickstart"
mystnb-to-jupyter = "myst_nb.cli:md_to_nb"
mystnb-docutils-html = "myst_nb.docutils_:cli_html"
mystnb-docutils-html5 = "myst_nb.docutils_:cli_html5"
mystnb-docutils-latex = "myst_nb.docutils_:cli_latex"
mystnb-docutils-xml = "myst_nb.docutils_:cli_xml"
mystnb-docutils-pseudoxml = "myst_nb.docutils_:cli_pseudoxml"

[tool.flit.module]
name = "myst_nb"

[tool.flit.sdist]
exclude = [
    "docs/",
    "tests/",
]

[tool.mypy]
show_error_codes = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["myst_nb.*"]
# can only follow these imports when more of the code is typed
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["docutils.*", "nbformat.*", "jupyter_cache.*", "IPython.*", "pygments.*"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
src_paths = ["myst_nb", "tests"]
force_sort_within_sections = true
