[metadata]
name = myst-nb
version = attr: myst_nb.__version__
description = A Jupyter Notebook Sphinx reader built on top of the MyST markdown parser.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/executablebooks/myst-nb
author = ExecutableBookProject
author_email = chrisj_sewell@hotmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
keywords =
    markdown
    lexer
    parser
    development
    docutils
    sphinx
project_urls =
    Documentation=https://myst-nb.readthedocs.io

[options]
packages = find:
install_requires =
    docutils>=0.15
    importlib_metadata
    ipython
    ipywidgets>=7.0.0,<8
    jupyter-cache~=0.4.1
    jupyter_sphinx~=0.3.2
    myst-parser~=0.13.5
    nbconvert~=5.6
    nbformat~=5.0
    pyyaml
    sphinx>=2,<4
    sphinx-togglebutton~=0.2.2
python_requires = >=3.6
include_package_data = True
zip_safe = True

[options.packages.find]
exclude =
    test*

[options.entry_points]
myst_nb.mime_render =
    default = myst_nb.render_outputs:CellOutputRenderer
    inline = myst_nb.render_outputs:CellOutputRendererInline
# pygments.lexers =
#     myst_ansi = myst_nb.ansi_lexer:AnsiColorLexer

[options.extras_require]
code_style =
    pre-commit~=2.12
rtd =
    alabaster
    altair
    bokeh
    coconut~=1.4.3
    ipywidgets
    jupytext~=1.8.0
    matplotlib
    numpy
    pandas
    plotly
    sphinx-book-theme~=0.1.0
    sphinx-copybutton
    sphinx-panels~=0.4.1
    sphinxcontrib-bibtex
    sympy
testing =
    coverage<5.0
    jupytext~=1.8.0
    # TODO: 3.4.0 has some warnings that need to be fixed in the tests.
    matplotlib~=3.3.0
    numpy
    pandas
    pytest~=5.4
    pytest-cov~=2.8
    pytest-regressions
    sympy

[flake8]
max-line-length = 100
extend-ignore = E203
