[metadata]
name = myst-nb
version = attr: myst_nb.__version__
description = A Jupyter Notebook Sphinx reader built on top of the MyST markdown parser.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/executablebooks/myst-nb
author = ExecutableBookProject
author_email = chrisj_sewell@hotmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
keywords =
    markdown
    lexer
    parser
    jupyter
    docutils
    sphinx
project_urls =
    Documentation=https://myst-nb.readthedocs.io

[options]
packages = find:
install_requires =
    docutils>=0.15,<0.18
    importlib_metadata
    ipython
    jupyter-cache~=0.4.1
    myst-parser @ git+git://github.com/executablebooks/MyST-Parser.git@master
    nbformat~=5.0
    pyyaml
    sphinx>=3.5,<5
    sphinx-togglebutton~=0.2.2
    typing-extensions
python_requires = >=3.7
include_package_data = True
zip_safe = True

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    mystnb-docutils-html = myst_nb.docutils_:cli_html
    mystnb-docutils-html5 = myst_nb.docutils_:cli_html5
    mystnb-docutils-latex = myst_nb.docutils_:cli_latex
    mystnb-docutils-xml = myst_nb.docutils_:cli_xml
    mystnb-docutils-pseudoxml = myst_nb.docutils_:cli_pseudoxml
myst_nb.renderers =
    default = myst_nb.render:NbElementRenderer
pygments.lexers =
    myst-ansi = myst_nb.lexers:AnsiColorLexer
    ipythontb = myst_nb.lexers:IPythonTracebackLexer

[options.extras_require]
code_style =
    pre-commit~=2.12
rtd =
    alabaster
    altair
    bokeh
    coconut~=1.4.3
    ipykernel~=5.5
    ipywidgets
    jupytext~=1.11.2
    matplotlib
    numpy
    pandas
    plotly
    sphinx-book-theme~=0.1.0
    sphinx-copybutton
    sphinx-panels~=0.4.1
    sphinxcontrib-bibtex
    sympy
testing =
    coverage<5.0
    beautifulsoup4
    ipykernel~=5.5
    ipywidgets
    jupytext~=1.11.2
    # TODO: 3.4.0 has some warnings that need to be fixed in the tests.
    matplotlib~=3.3.0
    numpy
    pandas
    pytest~=5.4
    pytest-cov~=2.8
    pytest-regressions
    pytest-param-files~=0.3.3
    sympy

[flake8]
max-line-length = 100
extend-ignore = E203

[mypy]
show_error_codes = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true

[mypy-myst_nb.*]
; can only follow these imports when more of the code is typed
follow_imports = skip

[mypy-docutils.*]
ignore_missing_imports = True

[mypy-nbformat.*]
ignore_missing_imports = True

[mypy-jupyter_cache.*]
ignore_missing_imports = True

[mypy-IPython.*]
ignore_missing_imports = True

[mypy-pygments.*]
ignore_missing_imports = True
